--- a/src/main/resources/org/buzz/swervesim/swerve-sim-view.fxml
+++ b/src/main/resources/org/buzz/swervesim/swerve-sim-view.fxml
@@ -18,7 +18,11 @@
     <Canvas fx:id="canvas" height="400.0" width="400.0"/>
 
     <HBox alignment="CENTER" spacing="20.0">
-        <Slider fx:id="angleSlider" minWidth="200" blockIncrement="1" minorTickCount="5" majorTickUnit="45" max="359" showTickMarks="true" value="90" />
+        <VBox alignment="CENTER" spacing="20.0">
+            <Slider fx:id="angleSlider" minWidth="200" minorTickCount="9" majorTickUnit="45" max="359" showTickMarks="true" value="90" />
+            <Slider fx:id="magnitudeSlider" minWidth="200" majorTickUnit="0.1" max="1.0" showTickMarks="true" value="0.25" />
+            <Slider fx:id="twistSlider" minWidth="200" minorTickCount="10" majorTickUnit="1.0" min="-1.0" max="1.0" showTickMarks="true" value="0.0" />
+        </VBox>
         <Button fx:id="frameButton" text="Frame" onAction="#onFrameButtonClick"/>
         <Button fx:id="startButton" text="Start" onAction="#onStartButtonClick"/>
         <Button fx:id="stopButton" text="Stop" onAction="#onStopButtonClick"/>
