--- a/src/main/resources/org/buzz/swervesim/swerve-sim-view.fxml
+++ b/src/main/resources/org/buzz/swervesim/swerve-sim-view.fxml
@@ -9,6 +9,7 @@
 
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.layout.GridPane?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.buzz.swervesim.SwerveSimViewController">
     <padding>
@@ -18,11 +19,19 @@
     <Canvas fx:id="canvas" height="400.0" width="400.0"/>
 
     <HBox alignment="CENTER" spacing="20.0">
-        <VBox alignment="CENTER" spacing="20.0">
-            <Slider fx:id="angleSlider" minWidth="200" minorTickCount="9" majorTickUnit="45" max="359" showTickMarks="true" value="90" />
-            <Slider fx:id="magnitudeSlider" minWidth="200" majorTickUnit="0.1" max="1.0" showTickMarks="true" value="0.25" />
-            <Slider fx:id="twistSlider" minWidth="200" minorTickCount="10" majorTickUnit="1.0" min="-1.0" max="1.0" showTickMarks="true" value="0.0" />
-        </VBox>
+        <GridPane alignment="CENTER">
+            <Label text="Angle" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Slider fx:id="angleSlider" minWidth="200" minorTickCount="9" majorTickUnit="45" max="359"
+                    showTickMarks="true" value="90" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+            <Label text="Magnitude" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Slider fx:id="magnitudeSlider" minWidth="200" majorTickUnit="0.1" max="1.0"
+                    showTickMarks="true" value="0.25" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+            <Label text="Twist" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <Slider fx:id="twistSlider" minWidth="200" minorTickCount="10" majorTickUnit="1.0" min="-1.0" max="1.0"
+                    showTickMarks="true" value="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        </GridPane>
         <Button fx:id="frameButton" text="Frame" onAction="#onFrameButtonClick"/>
         <Button fx:id="startButton" text="Start" onAction="#onStartButtonClick"/>
         <Button fx:id="stopButton" text="Stop" onAction="#onStopButtonClick"/>
